# Fight-Night-Finale

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
artwork/Animations/Blender/: PixelArtPrototype1.blend  PixelArtPrototype1_Enemy.blend  PixelArtTemplate.blend  PunchingBag.blend
artwork/Animations/TexturePacker/: EnemyPrototype.tps  Punchingbag.tps  Test.tps
artwork/Prototype_Box/: Prototype_Box.psd
artwork/prototype_scene/: prototype_scene.psd
artwork/prototype_scene_2/: prototype_scene_2.psd
assets/: Idle.json  ProtoPlayer.json  PunchingBag.json  Test.json  TestAnimPlayer.json  Walk.json
assets/characters/: dummy.json
assets/core/: keybinds.json
assets/prototype-scene/: ProtoScene.json
assets/prototype-scene-2/: ProtoScene2.json
design/: gcd.docx  gcd.md
design/character_design_sheets/: Dancer.psd  Enemies.psd  Presenter.psd
design/level_layouts/casino/: casino-layout.psd
design/level_layouts/desert/: desert1-layout.psd
design/level_layouts/factory/: factory-layout-moodboard.pur
design/level_layouts/tv_plato/: tvplato1-layout.psd
docs/: gcd.md
docs/character_design_sheets/: Blake.psd  Dancer.psd  Enemies.psd  Kickboxer.psd  Pit_And_Eyebot.psd  Presenter.psd  Wrestler.psd
docs/level_layouts/casino/: casino-layout.psd
docs/level_layouts/desert/: desert2-layout.psd
src/: Player.cpp  Player.hpp  PrototypeScene.cpp  PrototypeScene.hpp  TestCollision.cpp  TestCollision.hpp  main.cpp
src/Enemies/: Enemy.cpp  Enemy.hpp
src/Player/: Player.cpp  Player.hpp  PlayerController.cpp  PlayerController.hpp
(+12 files in other folders)
